crates/lattice-actor/tests/ui/derive/invalid_response.stderr
error: unexpected end of input, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
 --> tests/ui/derive/invalid_response.rs:2:21
  |
2 | #[request(response =)]
  |                     ^
