crates/lattice-actor/tests/ui/derive/invalid_response.rs
#[derive(lattice_actor::Request)]
#[request(response =)]
struct InvalidResponse;

fn main() {}
